--- a/Working with Markdown in Jupyter Notebooks.ipynb
+++ b/Working with Markdown in Jupyter Notebooks.ipynb
@@ -18,6 +18,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7f4f187-6200-4867-905a-13f4d35bdfab",
+   "metadata": {},
+   "source": [
+    "hello there "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "215d9b86-bbf1-4505-aaae-d931c99cb7e3",
    "metadata": {},
    "source": [
@@ -57,6 +65,14 @@
     "3. Copying and pasting a cell.\n",
     "4. Deleting a cell and undoing the deletion.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46de8f4a-cc4f-4c40-a059-601d75f82123",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -165,6 +181,24 @@
     "\n",
     "Try writing some code below:\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9283e02c-2ef3-4f5f-8eef-ddd63f998f6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, World!\")"
    ]
   },
   {
@@ -277,8 +311,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "30a48026-32ad-48fa-bb33-277b147b55af",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (325654306.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    $\\frac{3}{4}$\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "$\\frac{3}{4}$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5bf0365-c374-4d5a-bc54-13f8dd73596e",
+   "metadata": {},
+   "source": [
+    "$\\frac{1}{2}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "76feb940-eb57-46b9-bdae-f22c8cc2b65c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet():\n",
+    "    print(\"Hello, World!\")\n",
+    "    greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8927e401-1f4b-4854-845b-c53ea0db6a4d",
    "metadata": {},
    "outputs": [],
    "source": []
